# pytest-fly

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  pytest.ini  pytest_fly.bat  requirements-dev.txt  requirements.txt  run_coverage.py  tox.ini
.github/workflows/: main.yml
demo/: demo.bat  demo.py  make_venv_dev.bat  requirements-dev.txt
docs/: index.md  pytest-fly-liveness-recovery-spec.md  pytest-fly-memory-gate-spec.md  speeding_up_pytest_runs_SFPython_4_10_24.pptx
pytest_fly/: plugin.py
scripts/: blackify.bat  capture_assets.py  coverage.bat  make_venv_dev.bat  pypi.bat  pytest.bat  run_flake8.bat  run_mypy.bat  visualize.bat
src/pytest_fly/: __init__.py  __main__.py  __version__.py  colors.py  const.py  db.py  file_util.py  guid.py  interfaces.py  logger.py  main.py  os.py  paths.py  plugin.py  preferences.py  put_version.py  report_converter.py  tick_data.py  utilization.py  visualization.py
src/pytest_fly/app/: __init__.py  logger.py  logging.py  main.py  platform_info.py  preferences.py  test_list.py  utilization.py
src/pytest_fly/app/controller/: __init__.py  coverage.py  pytest_runner.py  utilization.py
src/pytest_fly/app/model/: __init__.py  db.py  interfaces.py  os.py  preferences.py  pytest_process.py  test_list.py
src/pytest_fly/app/view/: __init__.py  about.py  configuration.py  gui_main.py  gui_util.py  history.py  list_of_tests.py  main.py  status.py  table_tab.py  tests.py
src/pytest_fly/common/: __init__.py  classes.py  db.py  guid.py  interfaces.py  pytest_process_data.py
src/pytest_fly/db/: __init__.py  db.py  db_base.py  pytest_fly.py  pytest_report.py
src/pytest_fly/gui/: __init__.py  coverage_tracker.py  gui_main.py  gui_util.py  target_path_dialog.py
src/pytest_fly/platform/: __init__.py  os.py  platform_info.py
src/pytest_fly/plugin/: __init__.py  pytest_fly_plugin.py  xdist_workers.py
src/pytest_fly/pytest_runner/: __init__.py  commit_memory.py  const.py  coverage.py  live_output.py  ordering.py  process_monitor.py  pytest_process.py  pytest_runner.py  system_monitor.py  test_list.py  utilization.py
src/pytest_fly/visualization/: __init__.py  about.py  control.py  csv_dump.py  gui_main.py  home.py  main.py  plot_window.py  preferences.py  progress_window.py  project_info.py  status_window.py  visualization_calculations.py  visualization_qt.py
test_pytest_fly/: test_pytest_fly.py
tests/: conftest.py  orchestrator.py  paths.py  test_3_sec_operation.py  test_admission_gate.py  test_colors.py  test_commit_memory.py  test_configuration.py  test_control_window.py  test_coverage_calculation.py  test_coverage_extra.py  test_coverage_tab_report.py  test_coverage_tracker.py  test_db_extra.py  test_do_something.py  test_do_somthing.py  test_fails.py  test_file_util.py  test_fly.py  test_font.py  test_gui_display.py  test_gui_run_windows.py  test_gui_util.py  test_gui_widgets.py  test_interfaces.py  test_live_output.py  test_liveness_reaping.py  test_logger.py  test_long_operation.py  test_main_app.py  test_no_operation.py  test_ordering.py  test_ordering_aspects.py  test_paths.py  test_paths_extra.py  test_platform.py  test_platform_info_extra.py  test_platform_os.py  test_platform_os_extra.py  test_plugin.py  (+27 more)
tests/test_pytest_runner/: test_pytest_runner_multiprocess.py  test_pytest_runner_resize.py  test_pytest_runner_resume.py  test_pytest_runner_simple.py  test_pytest_runner_singleton.py  test_pytest_runner_soft_stop.py  test_pytest_runner_stop.py  test_pytest_runner_stop_kills_children.py  test_pytest_runner_two_singletons.py
(+48 files in other folders)
