[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-fly"
description = "pytest observer"
version = "0.1.0"
readme = "README.rst"
requires-python = ">=3.12"
authors = [
    { name = "James Abel", email = "j@abel.co" },
]
maintainers = [
    { name = "James Abel", email = "j@abel.co" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest>=6.2.0",
    "msqlite",
    "appdirs",
    "ismain"
]
[project.urls]
Repository = "https://github.com/jamesabel/pytest-fly"
[project.entry-points.pytest11]
fly = "pytest_fly.plugin"
