[project]
name = "pytest-fly"
description = "pytest runner and observer"
version = "0.3.29"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "James Abel", email = "j@abel.co" },
]
maintainers = [
    { name = "James Abel", email = "j@abel.co" },
]
license = { file = "LICENSE" }
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest",
    "msqlite",
    "platformdirs",
    "ismain",
    "numpy",
    "watchdog",
    "PySide6",
    "pref",
    "attrs",
    "typeguard",
    "balsa",
    "psutil",
    "py-cpuinfo",
    "humanize",
    "tobool",
    "uuid6",
    "coverage",
    "hashy"
]
keywords = ["pytest", "observer", "testing"]

[project.urls]
Home = "https://github.com/jamesabel/pytest-fly"
Repository = "https://github.com/jamesabel/pytest-fly"
Documentation = "https://github.com/jamesabel/pytest-fly#readme"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pre-commit",
    "pytest-qt",
    "pytest-pycharm",
    "pytest-cov",
    "pytest-xdist",
    "pytest-benchmark",
    "pytest-rerunfailures",
    "pytest-randomly",
    "flit",
    "hatch",
    "pip-tools",
]

[tool.ruff]
line-length = 192

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"